--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,8 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <!-- Bootstrap -->
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
   <!-- Google Fonts Link -->
   <link href="https://fonts.googleapis.com/css2?family=Kavoon&family=Poppins:wght@400;700&display=swap"
     rel="stylesheet">
